<resources>
    <string name="app_name">NasabahBankSampah</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_riwayat">Riwayat</string>
    <string name="title_profil">Profil</string>
    <string name="delano_yusuf_habibie">Delano Yusuf Habibie</string>
    <string name="nama_nasabah">Nama Nasabah</string>
    <string name="no_handphone">No Handphone: 08123456789</string>
    <string name="alamat">Alamat: Jl. Contoh Alamat No. 123</string>
    <string name="nama_bank">Nama Bank: Bank XYZ</string>
    <string name="nasabah">Nasabah</string>
    <string name="poin_anda">Poin Anda</string>
    <string name="_1500">1500</string>
    <string name="tabungan_uang">Tabungan Uang</string>
    <string name="rp_95_000">Rp 95.000</string>
    <string name="tukar_poin">Tukar Poin</string>
    <string name="transfer">Transfer</string>
    <string name="input_sampah">Input Sampah</string>
    <string name="informasi_harga">Informasi Harga</string>
    <string name="bantuan">Bantuan</string>
    <string name="notifikasi">notifikasi</string>
    <string name="foto_profil">foto_profil</string>
    <string name="semua">Semua</string>
    <string name="sampah">Sampah</string>
    <string name="poin">Poin</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="tanggal">Tanggal</string>
    <string name="_900">900</string>
    <string name="pilih_tukar_poin">Pilih untuk menukarkan poin anda</string>
    <string name="kebutuhan_harian">Kebutuhan Harian</string>
    <string name="kembali">Kembali</string>
    <string name="saldo_tabungan">Saldo Tabungan Uang</string>
    <string name="saldo_nominal">Rp 95.000</string>
    <string name="histori_transfer">Histori Transfer</string>
    <string name="histori_bri">BRI Rp 50.000 (3 Desember 2024)</string>
    <string name="histori_mandiri">Mandiri Rp 50.000 (3 Desember 2024)</string>
    <string name="btn_transfer">Transfer</string>
    <string name="transfer_ke_bank">Transfer ke Bank</string>
    <string name="pilih_bank">Pilih Bank</string>
    <string name="bri">BRI</string>
    <string name="bca">BCA</string>
    <string name="bni">BNI</string>
    <string name="mandiri">Mandiri</string>
    <string name="nomor_rekening">Nomor Rekening</string>
    <string name="nominal_transfer">Nominal Transfer</string>
    <string name="check_icon_desc">Ikon cek berhasil</string>
    <string name="transfer_berhasil">Transfer Berhasil</string>
    <string name="status_sukses">Status: Sukses</string>
    <string name="no_referensi">No Referensi: 0912301928***</string>
    <string name="nama_penerima">Nama: Delano Yusuf Habibie</string>
    <string name="no_rekening">Rekening: 1234 5678 9012 345</string>
    <string name="bank">Bank: BRI</string>
    <string name="nominal">Nominal: Rp 95.000</string>
    <string name="tanggal_angka">Tanggal: 3 Desember 2024</string>
    <string name="jam">Jam: 19.45 WIB</string>
    <string name="kembali_ke_beranda">Kembali ke Beranda</string>

    <string name="user_image_desc">Foto profil pengguna</string>
    <string name="notification_desc">Notifikasi</string>
    <string name="fab_help">Bantuan</string>

    <string name="notifikasi_desc">Notifikasi</string>
    <string name="profil_desc">Profil pengguna</string>
    <string name="pengangkut_desc">Ikon pengangkut sampah</string>
</resources>