<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp">

    <ImageView
        android:id="@+id/riwayatIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="12dp"
        android:src="@drawable/ic_sampah" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/riwayatDeskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/deskripsi"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/riwayatTanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:text="@string/tanggal"
            android:textSize="12sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/riwayatJumlah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_900"
        android:textStyle="bold" />
</LinearLayout>
