<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/light_green"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <!-- Header Hijau -->
        <RelativeLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:background="@color/dark_green"
            android:padding="12dp">

            <!-- Nama & Status -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical"
                android:layout_centerVertical="true">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Delano Yusuf Habibie"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/userStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="● Nasabah"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Notifikasi (kanan atas) -->
            <RelativeLayout
                android:id="@+id/notificationContainer"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="12dp">

                <ImageView
                    android:id="@+id/notification_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_notification"
                    android:background="@drawable/circle_background"
                    android:padding="6dp"
                    android:contentDescription="Notifikasi" />

                <View
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/circle_red_dot" />
            </RelativeLayout>

            <!-- Foto Profil (sebelah kiri notifikasi) -->
            <ImageView
                android:id="@+id/user_image"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_toStartOf="@id/notificationContainer"
                android:layout_marginEnd="12dp"
                android:layout_alignParentTop="true"
                android:src="@drawable/ic_profile"
                android:background="@drawable/circle_background"
                android:padding="4dp"
                android:scaleType="centerCrop"
                android:contentDescription="Profil" />
        </RelativeLayout>

        <!-- Judul -->
        <TextView
            android:text="@string/transfer_ke_bank"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            android:layout_marginBottom="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!-- Label Pilihan Bank -->
        <TextView
            android:textColor="@android:color/black"
            android:text="@string/pilih_bank"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>

        <!-- Baris 1 -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/bankBri"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/ic_bri"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/bri" />

            <ImageButton
                android:id="@+id/bankMandiri"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/ic_mandiri"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/mandiri" />
        </LinearLayout>

        <!-- Baris 2 -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="16dp"
            android:weightSum="2">

            <ImageButton
                android:id="@+id/bankBCA"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/ic_bca"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/bca" />

            <ImageButton
                android:id="@+id/bankBNI"
                android:layout_width="0dp"
                android:layout_height="64dp"
                android:layout_weight="1"
                android:src="@drawable/ic_bni"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/bni" />
        </LinearLayout>

        <!-- Form Nomor Rekening -->
        <EditText
            android:id="@+id/etRekeningTujuan"
            android:textColor="@android:color/black"
            android:hint="@string/nomor_rekening"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_green"
            android:padding="12dp"
            android:layout_marginBottom="12dp"
            android:autofillHints="emailAddress" />

        <!-- Form Nominal -->
        <EditText
            android:id="@+id/etNominal"
            android:hint="@string/nominal_transfer"
            android:textColor="@android:color/black"
            android:inputType="numberDecimal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_green"
            android:padding="12dp"
            android:layout_marginBottom="24dp"
            android:autofillHints="creditCardNumber" />

        <!-- Tombol Transfer -->
        <Button
            android:id="@+id/btnTransfer"
            android:text="@string/transfer"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/dark_green"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp" />
    </LinearLayout>
</ScrollView>